vlib/v/checker/tests/hash_flag_backticks_err.vv
#flag darwin `sdl2-config --cflags --libs` -lSDL2

fn main() {}
